--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,6 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
 
 /*
  * Remove text-shadow in selection highlight:
@@ -314,20 +309,93 @@ a {
   width: 8.68753em
 }
 
-.main-header .btn-slack {
+.main-header {
+  background-image: url("images/header-icons_2x.b8448e.png");
+  background-color: #21cdb2;
+  background-position-y: 120px;
+  background-repeat: no-repeat;
+  color: #fff;
+  margin-top: -5.25em;
+  min-height: 21.25em;
+  padding: 5.25em 0 20%
+}
+
+/* This section formats pages for different sized screens. */
+@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-webkit-min-pixel-ratio:1.3020833333333333),only screen and (min--moz-device-pixel-ratio:1.3),only screen and (min-resolution:1.3dppx),only screen and (min-resolution:125dpi) {
+  .main-header {
+    background-image: url("images/header-icons_2x.b8448e.png");
+    background-size: 740px 340px
+  }
+
+
+.main-header .headline {
+  max-width: 50%;
+  padding-top: 5em;
+}
+
+.main-header .headline .btn-slack {
   height: 80px;
   width: 278px
 }
 
-.main-header,.product-header {
-  background-image: url("images/header-icons_2x.b8448e.png");
-  background-color: #21cdb2;
-  color: #fff;
+.main-header .headline h1 {
+  margin: 0;
+  font-size: 2.375em;
+  font-weight: 700;
+  font-weight: 300;
+  line-height: 1.3
 }
-/* This section formats pages for different sized screens. */
-@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-webkit-min-pixel-ratio:1.3020833333333333),only screen and (min--moz-device-pixel-ratio:1.3),only screen and (min-resolution:1.3dppx),only screen and (min-resolution:125dpi) {
-  .main-header,.product-header {
-    background-image: url("images/header-icons_2x.b8448e.png");
-    background-size: 740px 340px
+
+.main-header .headline p {
+  margin: 12px 0 32px;
+  opacity: .8;
+  font-size: 1.375em
+}
+
+.main-header>img {
+  max-width: 52%;
+  position: absolute;
+  top: 138px;
+  right: 0;
+  z-index: 1
+}
+
+@media (min-width: 1200px) {
+  .main-header>img {
+    right: -3.75em
   }
+
+@media (max-width: 480px) {
+  .main-header>img {
+    margin-left: auto;
+    margin-right: 0;
+    max-width: 100%;
+    position: relative;
+    top: 40px
+  }
+}
+
+@media (min-width: 768px) and (max-width:991px) {
+  .main-header {
+    background-position-y: 80px;
+    margin-top: -6.66667em;
+    padding-bottom: 10%
+  }
+  .main-header .headline {
+    max-width: 58%
+  }
+  .main-header>img {
+    top: 148px;
+  }
+}
+
+@media (max-width: 480px) {
+  .main-header {
+    margin-top: 0;
+    padding-top: 0
+  }
+}
+
+}
+
 }
